2017-September-09 Struan Robertson

		* System.h/.cpp, ConditionsManager.h/.cpp, CollisionOperator.h/.cpp MesmerFlags.h/.cpp,
		fitting.cpp, Marquardt.cpp, SensitivityAnalysis.cpp, ErrorPropagation.cpp : Changes in
		include layout to allow experimental parameters to be used in definition of the collision
		matrix. Also, changes to read diffusive loss from trace data.

2017-September-03 Struan Robertson

		* ClassicalCoupledRotors.cpp: Initial revision of the coupled rotors model.

		* Reaction.h/.cpp, gDensityOfStates: Minor tidying.

2017-August-20 Struan Robertson

		* System.cpp: Trace fitting altered so that it cannot produce negative values.

2017-August-06 Struan Robertson

		* DiffusiveLossReaction.cpp/.h: Diffusive loss terms added to collision matrix.

2017-August-03 Struan Robertson

		* ReactionManger.cpp, DiffusiveLossReaction.cpp/.h: Initial changes for diffusive
		loss term.

2017-July-31 Struan Robertson

		* Added MPIRelease configuration to VS 2015 project files.

		* Documentation update.

		* Copyright update.

2017-July-22 Struan Robertson

		* Added VS 2017 project files.

2017-July-02 Struan Robertson

		* System.cpp, ConditionsManger.cpp/.h: Updates to trace fitting to allow for parallel
		execution and output.

2017-July-02 Struan Robertson

		* Documentation and Makefile update for SimpleRRKM to RRKM keyword change.

		* System.cpp/.h: Minor changes in preparation for trace fitting.

		* TMatrix.h: Fix for Linux/MacOS build break.

		* LandauZenerCrossing.cpp, ZhuNakamuraCrossing.cpp, WKBCrossing.cpp: minor
		tidying of code in preparation for base class abstraction.

2017-June-29 Chris Morley
		* src/Rdouble.cpp, src/Rdouble.h: add UpdateDerivedVariables() which does not
		  write to XML
		* src/plugins/FittingUtils.cpp, src/plugins/gridsearch.cpp: call
		  UpdateDerivedVariables() when incrementing a range variable

2017-June-28 Chris Morley
		* schemas/CMLforMesmer.xsd, schemas/mesmer.xsd,src/Rdouble.cpp,src/Rdouble.h: